# MathCore

./: .gitignore  ARCHITECTURE.md  CODE_STYLE.md  Cargo.toml  README.md  [input removed due to failed tool call]  benchmark_optimizations.py  code_improvement_implementation_report.md  code_quality_review_report.md  comprehensive_code_audit_report.md  opencode_init.md  phase_priority_plan.md  pyproject.toml  remaining_tasks.md  task_manager.py  task_review_and_execution_plan.md  test_evaluation_report.md  test_improvement_recommendations.md  test_python_bindings.py  test_quick_reference.md
.docs/: MathCore v6.0 完整技术设计方案.md  OpenCode_Swarm_Initial_Playbook.md
.github/workflows/: ci.yml
.hive/: issues.jsonl
.trae/: tasks.md
.trae/documents/: MathCore_development_plan.md  MathCore_review_plan.md  MathCore_review_report.md
.trae/rules/: project_rules.md
crates/bridge/: Cargo.toml
crates/bridge/src/: data_plane.rs  lib.rs
crates/bridge/src/arrow/: Array.rs  RecordBatchWrapper.rs  Schema.rs  dma.rs  mod.rs
crates/bridge/src/mcp/: mod.rs
crates/bridge/src/python/: mod.rs  tests.rs
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/compute/: Cargo.toml
crates/compute/benches/: compute_bench.rs
crates/compute/src/: cache.rs  lexer.rs  lib.rs  replay.rs  validation.rs
crates/compute/src/numeric/: mod.rs
crates/compute/src/simd/: mod.rs
crates/compute/src/symbolic/: mod.rs
crates/kernel/: Cargo.toml
crates/kernel/benches/: protocol_bench.rs
crates/kernel/src/: error.rs  lib.rs
crates/kernel/src/bus/: mod.rs
crates/kernel/src/core/: mod.rs
crates/kernel/src/protocol/: mod.rs
crates/kernel/src/sandbox/: mod.rs
crates/kernel/src/streaming/: mod.rs
crates/kernel/src/validation/: domain.rs  mod.rs  parser.rs  quick_fail.rs  special.rs  type_check.rs  types.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  protocol.rs  server.rs  tools.rs
crates/render/: Cargo.toml
crates/render/src/: cache.rs  camera.rs  data.rs  engine.rs  lib.rs  lighting.rs  parallel.rs  pipeline.rs  protocol.rs  replay_gui.rs  schema.fbs  shm.rs  simd.rs  stream.rs  tests.rs  visualization.rs  visualization_3d.rs  window.rs
crates/render/src/shaders/: quad.wgsl  surface.wgsl
crates/render/src/wgpu/: mod.rs
crates/smt/: Cargo.toml
crates/smt/src/: lib.rs  rule_engine.rs  smt_lib.rs  z3_integration.rs
crates/symbols/: Cargo.toml
crates/symbols/src/: context_resolution.rs  lib.rs  symbol_table.rs  unicode_symbols.rs
crates/verification/: Cargo.toml
crates/verification/src/: certificate.rs  config.rs  lib.rs  mesh.rs
crates/verification/src/levels/: level1.rs  level2.rs  level3.rs  mod.rs
docs/: phase1_tasks.md  phase2_tasks.md  phase3_tasks.md  phase4_tasks.md  project_overview.md  project_overview_v1.2.md  technical_optimization.md  technical_optimization_v1.2.md
examples/: usage_example.py
py/: setup.py
py/mathcore/: __init__.py  cli.py  engine.py  numerical.py  symbolic.py
thoughts/ledgers/: CONTINUITY_ses_3448.md  CONTINUITY_ses_3471.md  CONTINUITY_ses_3472.md  CONTINUITY_ses_3494.md  CONTINUITY_ses_3497.md  CONTINUITY_ses_3498.md  CONTINUITY_ses_349a.md  CONTINUITY_ses_34ad.md  CONTINUITY_ses_34ae.md
