[workspace]
resolver = "2"
members = [
    "crates/kernel",
    "crates/compute",
    "crates/render",
    "crates/bridge",
    "crates/cli",
    "crates/smt",
    "crates/symbols",
    "crates/symbols",
    "crates/verification",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["MathCore Team <team@mathcore.dev>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mathcore/mathcore"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async messaging
tokio-util = "0.7"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Utilities
once_cell = "1.20"
parking_lot = "0.12"
camino = "1.1"
ordered-float = "3.8"
num-traits = "0.2"
portable-atomic = "1.6"

# Testing
mockall = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
