[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mathcore"
version = "0.6.0"
description = "High-performance mathematical computation engine with symbolic and numerical capabilities"
readme = "README.md"
license = {text = "MIT OR Apache-2.0"}
authors = [
    {name = "MathCore Team", email = "team@mathcore.dev"}
]
keywords = ["math", "computation", "symbolic", "numerical", "engine"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20",
    "sympy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]
gui = [
    "PyQt6>=6.0",
    "matplotlib>=3.5",
]
all = [
    "numpy>=1.20",
    "sympy>=1.10",
    "PyQt6>=6.0",
    "matplotlib>=3.5",
    "pytest>=7.0",
]

[project.urls]
Homepage = "https://github.com/mathcore/mathcore"
Documentation = "https://docs.mathcore.dev"
Repository = "https://github.com/mathcore/mathcore"
Issues = "https://github.com/mathcore/mathcore/issues"

[project.scripts]
mathcore = "mathcore.cli:main"

[tool.setuptools.packages.find]
where = ["py"]
include = ["mathcore*"]

[tool.setuptools.package-data]
mathcore = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
