[package]
name = "mathcore-bridge"
description = "MathCore bridge - MCP protocol, Python bindings, HTTP API"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
once_cell.workspace = true

# Compute module
mathcore-compute = { path = "../compute" }

# Python bindings
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[features]
default = []
pyo3 = ["dep:pyo3"]
