[package]
name = "mathcore-compute"
description = "MathCore compute plugins - symbolic, numeric, and external engines"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
camino.workspace = true
num-traits.workspace = true
portable-atomic.workspace = true
mockall.workspace = true
regex-lite = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
bench = []
