[package]
name = "mathcore-mcp"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "MathCore MCP Bridge - Model Context Protocol integration"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"

# Internal dependencies
mathcore-kernel = { path = "../kernel" }
mathkernel = { path = "../compute" }
mathcore-symbols = { path = "../symbols" }

[dev-dependencies]

[features]
default = []
