[package]
name = "mathcore-render"
description = "MathCore render plugins - GPU rendering with wgpu"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
lazy_static = "1.4"
glam = "0.24"
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
parking_lot.workspace = true

# GPU rendering
bytemuck = { version = "1.0", features = ["derive"] }
wgpu = "0.19"

# Data plane (Arrow)
arrow2 = { version = "0.17", features = ["io_ipc", "io_ipc_compression", "compute"] }

# Shared memory
# Shared memory
memmap2 = "0.9"

# FlatBuffers for streaming protocol
flatbuffers = "25.12"
flatk = "0.5"

# SIMD acceleration
autocfg = "1.0"
portable-atomic = "1.6"

# Parallel processing
rayon = "1.8"

# Caching
lru = "0.12"
moka = { version = "0.12", features = ["sync"] }


[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
