[package]
name = "mathcore-symbols"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror = "2.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
unicode-width = "0.1"

[dev-dependencies]
proptest = "1.5"

[features]
default = []
unicode = []
